<resources>
    <string name="app_name">Foppal 24/7</string>
    <string name="main_text">Foppal 24/7, your football news source!</string>
    <string name="brasil">Brasil</string>
    <string name="norge">Norge</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- All normal text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postnord">PostNord-Ligaen News</string>
    <string name="obos">OBOS-Ligaen News</string>
    <string name="eliteserien">Eliteserien News</string>
    <string name="site">Site</string>
    <string name="all">All News</string>
    <string name="espana">España</string>
    <string name="nederland">Nederland</string>
    <string name="sverige">Sverige</string>
    <string name="deutschland">Deutschland</string>
    <string name="noInternet">Internet connection not available!</string>
    <string name="brasileirao">Brasileirão News</string>
    <string name="serieb">Brasil B News</string>
    <string name="serie_b">serie_b</string>
    <string name="brazil">brazil</string>
    <string name="laliga">La Liga News</string>
    <string name="laliga2">La Liga 2 News</string>
    <string name="allsvenskan">Allsvenskan News</string>
    <string name="eredivisie">Eredivisie News</string>
    <string name="bundesliga">Bundesliga News</string>
    <string name="bundesliga2">2. Bundesliga News</string>
    <string name="loader_text">Foppal 24/7</string>
    <string name="bundesliga2_teams">2. Bundesliga Teams</string>
    <string name="bundesliga_teams">Bundesliga Teams</string>
    <string name="eredivisie_teams">Eredivisie Teams</string>
    <string name="allsvenskan_teams">Allsvenskan Teams</string>
    <string name="laliga2_teams">La Liga 2 Teams</string>
    <string name="laliga_teams">La Liga Teams</string>
    <string name="serieb_teams">Série B Teams</string>
    <string name="brasileirao_teams">Brasileirão Teams</string>
    <string name="postnord_teams">PostNord-Ligaen Teams</string>
    <string name="obos_teams">OBOS-Ligaen Teams</string>
    <string name="eliteserien_teams">Eliteserien Teams</string>
    <string name="site_fp" translatable="false">foppal247.com</string>
    <string name="all_en">News in English</string>
    <string name="favorite">Favorite</string>
    <string name="eliteserien_all_teams">Eliteserien All team news</string>
    <string name="eliteserien_teams_news">Choose Eliteserien Team</string>
    <string name="obos_all_teams_news">OBOS-ligaen all teams news</string>
    <string name="obos_teams_news">Choose OBOS-Ligaen team</string>
    <string name="postnord_all_news">PostNord-Ligaen All teams news</string>
    <string name="postnord_teams_news">Choose PostNord-Ligaen team</string>
    <string name="brasileirao_news">Brasileirão all news</string>
    <string name="brasileirao_teams_news">Choose Brasileirão team</string>
    <string name="serieb_news">Brasil Série B news</string>
    <string name="serieb_teams_news">Choose Série B team</string>
    <string name="all_en_espana">All Spain news in English</string>
    <string name="laliga_news">All La Liga news</string>
    <string name="laliga_teams_news">Choose La Liga team</string>
    <string name="laliga2_news">All La Liga 2 news</string>
    <string name="laliga2_teams_news">Choose La Liga 2 team</string>
    <string name="allsvenskan_news">All Allsvenskan news</string>
    <string name="allsvenskan_teams_news">Choose Allsvenskan team</string>
    <string name="all_en_nederland">All Netherlands news in English</string>
    <string name="eredivisie_news">All Eredivisie news</string>
    <string name="eredivisie_teams_news">Choose Eredivisie team</string>
    <string name="all_en_deutschland">All Germany news in English</string>
    <string name="bundesliga_news">All Bundesliga news</string>
    <string name="bundesliga_teams_news">Choose Bundesliga team</string>
    <string name="bundesliga2_news">All 2. Bundesliga news</string>
    <string name="bundesliga2_teams_news">Choose 2. Bundesliga team</string>
    <string name="getting_more_news">Loading more news!</string>
    <string name="favorite_added">Team added to Favorites list!</string>
    <string name="exclude_favorite">Do you want to exclude from favorites?</string>
    <string name="exclude_title">Exclude?</string>
    <string name="excluded_success">Excluded with success</string>
    <string name="exclude_cancelled">Action canceled</string>
</resources>
